tests/baselines/reference/parserReturnStatement1.errors.txt
parserReturnStatement1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.


==== parserReturnStatement1.ts (1 errors) ====
    return;
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.